--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "lucide-react": "^0.514.0",
     "next": "^15.3.3",
     "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "19.1.8",
