--- a/package.json
+++ b/package.json
@@ -1,40 +1,46 @@
 {
-  "name": "florai",
-  "version": "0.1.0",
-  "private": true,
+  "name": "florai-new",
+  "version": "1.0.0",
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://nextjs.org/docs/app/api-reference/cli/create-next-app).",
+  "main": "index.js",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/yuurisha/florai.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/yuurisha/florai/issues"
+  },
+  "homepage": "https://github.com/yuurisha/florai#readme",
   "dependencies": {
-    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/themes": "^3.2.1",
     "class-variance-authority": "^0.7.1",
-    "classnames": "^2.5.1",
-    "clsx": "^2.1.1",
-    "leaflet": "^1.9.4",
-    "leaflet.heat": "^0.2.0",
-    "lucide-react": "^0.511.0",
-    "next": "15.3.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-leaflet": "^5.0.0",
-    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
-    "tailwind-merge": "^3.3.1"
+    "firebase": "^11.9.1",
+    "lucide-react": "^0.516.0",
+    "next": "^15.3.3",
+    "papaparse": "^5.5.3",
+    "react": "^19.1.0",
+    "react-calendar": "^6.0.0",
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.1",
+    "typescript": "^5.8.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/leaflet": "^1.9.18",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/papaparse": "^5.3.16",
+    "@types/react": "19.1.8",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.1"
   }
 }
