fix: Update OpenWeather API key environment variable and upgrade Next.js version

--- a/package.json
+++ b/package.json
@@ -21,13 +21,12 @@
     "leaflet-draw": "^1.0.4",
     "leaflet.heat": "^0.2.0",
     "lucide-react": "^0.511.0",
-    "next": "15.3.3",
+    "next": "^15.3.6",
     "papaparse": "^5.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-leaflet": "^5.0.0",
-    "react-leaflet-heatmap-layer-v3": "^3.0.3-beta-1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
