--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "firebase": "^12.7.0",
+    "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
