--- a/planthealth-modelserver/requirements.txt
+++ b/planthealth-modelserver/requirements.txt
@@ -1,10 +1,7 @@
 fastapi
 uvicorn
-ultralytics
-opencv-python-headless
-pillow
-numpy
 python-multipart
-torch
-torchvision
-timm
+ultralytics
+onnxruntime
+numpy
+Pillow
